# python-ffmpeg-wrappers

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
old/: affmpeg.py  extract_all.py  ffmpeg-old.py  ffmpeg.py  ffprobe.py  parallel.py  parse.py  parsing-ffmpeg.py  rename.py  single-old.py  single.py
old/lang/: lang 2.py  lang 2.txt  lang 2.yaml
src/ffmpeg_wrappers/cli/: pympeg.py  pyprobe.py
src/ffmpeg_wrappers/core/: avfile.py
src/ffmpeg_wrappers/core/ffmpeg/: __init__.py  progress.py  run.py
src/ffmpeg_wrappers/tools/: auto_sync.py  generator.py
src/ffmpeg_wrappers/utils/: ISO_639_2_UTF8.py
